hphp/hack/test/typecheck/void_is_type_of_null/void_usage_5.php.exp
File "void_usage_5.php", line 12, characters 3-15:
  array<^(string)>
File "void_usage_5.php", line 5, characters 5-64:
Invalid return type (Typing[4110])
File "void_usage_5.php", line 5, characters 5-64:
This is void because this function implicitly returns void
File "void_usage_5.php", line 10, characters 11-16:
It is incompatible with a string
